--- a/message-dashboard/main.css
+++ b/message-dashboard/main.css
@@ -1,19 +1,21 @@
-html, body {
-    font-family: Lato, Helvetica, Arial;
-}
-
 :root {
     --light-purple: #454389;
     --accent-purple: #7673c0;
     --dark-purple: #5454fb;
     --darkest-purple: #343268;
     --mid-grey: #f3f3f8;
+    --light-grey: #e2e5ee;
     --dark-grey: #ccccd9;
     --grey-accent: #9098b1;
     --white: #ffffff;
     --red: #ff3463;
     --green: #5ac489;
     --yellow: #ffc400;
+}
+
+html, body {
+    font-family: Lato, Helvetica, Arial;
+    background: var(--mid-grey);
 }
 
 a {
@@ -30,7 +32,19 @@ a:hover {
 }
 
 .padding15 {
-    padding: 8px;
+    padding: 15px;
+}
+
+.margin10 {
+    margin: 10px;
+}
+
+.paddingTop25 {
+    padding-top: 25px;
+}
+
+.paddingTop15 {
+    padding-top: 15px;
 }
 
 .marginTop25 {
@@ -57,7 +71,7 @@ a:hover {
     padding: 0 20px;
 }
 
-.pointer{
+.pointer {
     cursor: pointer;
 }
 
@@ -91,7 +105,7 @@ a:hover {
     color: var(--accent-purple);
 }
 
-.menu > ul > li.active > a, .menu > ul > li:hover > a{
+.menu > ul > li.active > a, .menu > ul > li:hover > a {
     color: var(--white);
 }
 
@@ -102,34 +116,46 @@ a:hover {
     background-image: -webkit-linear-gradient(top, #5A5AFB 0%, #4d4dfa 100%);
 }
 
-.topLogo h3{
+.topLogo h3 {
     margin: 0;
+}
+
+.backgroundWhite {
+    background-color: var(--white);
+}
+
+.backgroundMidGrey {
+    background-color: var(--mid-grey);
+}
+
+.backgroundLightGrey {
+    background-color: var(--light-grey);
 }
 
 .textWhite {
     color: var(--white);
 }
 
-.notification{
-    background-color: var(--red)!important;
+.notification {
+    background-color: var(--red) !important;
     font-size: 10px;
     padding: 1px 6px;
     margin-top: 1px;
     border-radius: 2px;
 }
 
-.searchBox{
+.searchBox {
     background-color: var(--mid-grey);
     border-radius: 3px;
-    -webkit-box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.35);
-    -moz-box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.35);
-    box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.35);
+    -webkit-box-shadow: inset 0px 0px 1px 0px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: inset 0px 0px 1px 0px rgba(0, 0, 0, 0.35);
+    box-shadow: inset 0px 0px 1px 0px rgba(0, 0, 0, 0.35);
     height: auto;
     width: 100%;
     padding: 6px 10px;
 }
 
-.search{
+.search {
     background: none;
     width: 100%;
     border: 0;
@@ -139,21 +165,30 @@ a:hover {
     outline: 0;
 }
 
-.searchBox .fa{
+.searchBox .fa {
     position: absolute;
     padding: 4px 8px;
     color: var(--grey-accent);
 }
 
-.shadowBottom{
-    -webkit-box-shadow: 0px 4px 5px 0px rgba(144,152,177,0.37);
-    -moz-box-shadow: 0px 4px 5px 0px rgba(144,152,177,0.37);
-    box-shadow: 0px 4px 5px 0px rgba(144,152,177,0.37);
+.shadowBottom {
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(144, 152, 177, 0.37);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(144, 152, 177, 0.37);
+    box-shadow: 0px 4px 5px 0px rgba(144, 152, 177, 0.37);
     padding-bottom: 15px;
 }
 
-.smallNotification{
+.zIndex1 {
+    z-index: 1;
+}
+
+.zIndex2 {
+    z-index: 2;
+}
+
+.smallNotification {
     font-size: 9px;
+    z-index: 1;
     font-weight: bold;
     color: var(--white);
     background-color: var(--red);
@@ -165,46 +200,344 @@ a:hover {
     top: -2px;
 }
 
-.fa-bell, .fa-comment{
+.fa-bell, .fa-comment {
     color: var(--grey-accent);
     font-size: 18px;
 }
 
-.topNotification{
+@-webkit-keyframes ring {
+    0% {
+        -webkit-transform: rotate(-15deg);
+        transform: rotate(-15deg)
+    }
+    2% {
+        -webkit-transform: rotate(15deg);
+        transform: rotate(15deg)
+    }
+    4% {
+        -webkit-transform: rotate(-18deg);
+        transform: rotate(-18deg)
+    }
+    6% {
+        -webkit-transform: rotate(18deg);
+        transform: rotate(18deg)
+    }
+    8% {
+        -webkit-transform: rotate(-22deg);
+        transform: rotate(-22deg)
+    }
+    10% {
+        -webkit-transform: rotate(22deg);
+        transform: rotate(22deg)
+    }
+    12% {
+        -webkit-transform: rotate(-18deg);
+        transform: rotate(-18deg)
+    }
+    14% {
+        -webkit-transform: rotate(18deg);
+        transform: rotate(18deg)
+    }
+    16% {
+        -webkit-transform: rotate(-12deg);
+        transform: rotate(-12deg)
+    }
+    18% {
+        -webkit-transform: rotate(12deg);
+        transform: rotate(12deg)
+    }
+    100%, 20% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg)
+    }
+}
+
+@keyframes ring {
+    0% {
+        -webkit-transform: rotate(-15deg);
+        -ms-transform: rotate(-15deg);
+        transform: rotate(-15deg)
+    }
+    2% {
+        -webkit-transform: rotate(15deg);
+        -ms-transform: rotate(15deg);
+        transform: rotate(15deg)
+    }
+    4% {
+        -webkit-transform: rotate(-18deg);
+        -ms-transform: rotate(-18deg);
+        transform: rotate(-18deg)
+    }
+    6% {
+        -webkit-transform: rotate(18deg);
+        -ms-transform: rotate(18deg);
+        transform: rotate(18deg)
+    }
+    8% {
+        -webkit-transform: rotate(-22deg);
+        -ms-transform: rotate(-22deg);
+        transform: rotate(-22deg)
+    }
+    10% {
+        -webkit-transform: rotate(22deg);
+        -ms-transform: rotate(22deg);
+        transform: rotate(22deg)
+    }
+    12% {
+        -webkit-transform: rotate(-18deg);
+        -ms-transform: rotate(-18deg);
+        transform: rotate(-18deg)
+    }
+    14% {
+        -webkit-transform: rotate(18deg);
+        -ms-transform: rotate(18deg);
+        transform: rotate(18deg)
+    }
+    16% {
+        -webkit-transform: rotate(-12deg);
+        -ms-transform: rotate(-12deg);
+        transform: rotate(-12deg)
+    }
+    18% {
+        -webkit-transform: rotate(12deg);
+        -ms-transform: rotate(12deg);
+        transform: rotate(12deg)
+    }
+    100%, 20% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg)
+    }
+}
+
+@-webkit-keyframes horizontal {
+    0% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    6% {
+        -webkit-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    12% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    18% {
+        -webkit-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    24% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    30% {
+        -webkit-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    100%, 36% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+}
+
+@keyframes horizontal {
+    0% {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    6% {
+        -webkit-transform: translate(5px, 0);
+        -ms-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    12% {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    18% {
+        -webkit-transform: translate(5px, 0);
+        -ms-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    24% {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+    30% {
+        -webkit-transform: translate(5px, 0);
+        -ms-transform: translate(5px, 0);
+        transform: translate(5px, 0)
+    }
+    100%, 36% {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0)
+    }
+}
+
+.fa-bell:hover {
+    -webkit-animation: ring 2s ease infinite;
+    animation: ring 2s ease infinite;
+    transform-origin-x: 50%;
+    transform-origin-y: 0;
+    transform-origin-z: initial;
+    color: var(--dark-purple);
+    cursor: pointer;
+}
+
+.fa-comment:hover {
+    -webkit-animation: horizontal 2s ease infinite;
+    animation: horizontal 2s ease infinite;
+    color: var(--dark-purple);
+    cursor: pointer;
+}
+
+.topNotification {
     margin: 6px 10px 0 10px;
     position: relative;
 }
 
-.avatarImage{
+.avatarImage {
     max-height: 36px;
     border-radius: 50%;
     margin-left: 20px;
 }
 
-.username{
+.avatarImage--Large {
+    max-height: 46px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.titleText {
     font-size: 13px;
     margin: 0 5px;
     color: var(--grey-accent);
 }
 
-.fa-chevron-down{
+.fa-chevron-down {
     font-size: 12px;
     color: var(--grey-accent);
 }
 
-.textAccent{
+.textAccent {
     color: var(--grey-accent);
 }
 
-.btn{
+.btn {
     font-size: 13px;
 }
 
-.btnPurple{
+.btnPurple {
     background-color: var(--dark-purple);
     color: var(--white);
 }
 
-.btnPurple .fa{
+.btnPurple .fa {
     margin-left: 10px;
+}
+
+.flexColumn {
+    display: flex;
+    flex-flow: column;
+}
+
+.flexRow {
+    flex: 1 1 auto;
+    overflow: auto;
+}
+
+.messagesList {
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.messageBar {
+    background-color: var(--white);
+    margin: 10px;
+    padding: 15px 10px;
+    border-left: 4px solid var(--white);
+    border-radius: 4px;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    opacity: 0.7;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -ms-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+
+.messageBar.active {
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    transform: scale(1.04);
+    opacity: 1;
+}
+
+.messageBar.unread {
+    opacity: 1;
+    border-left: 4px solid var(--dark-purple);
+}
+
+.messageBar:hover {
+    opacity: 1;
+    transform: scale(1.04);
+}
+
+.messageBar .titleText {
+    margin: 0px 10px 0 20px;
+    display: inline-block;
+    font-weight: bold;
+}
+
+.messageBar .messageText, .messageBar .timeText {
+    margin: 0px 10px 0 20px;
+    font-size: 12px;
+    color: var(--grey-accent);
+}
+
+.messageBar .timeText {
+    margin: 14px 0;
+}
+
+.verticalMenu {
+    margin: 5px 10px 0 0;
+}
+
+.messageBar .verticalMenu:after {
+    content: '\2807';
+    font-size: 23px;
+    color: var(--grey-accent);
+}
+
+.circleIndicator {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin: 3px 10px 10px 20px;
+}
+
+.metadata {
+    font-size: 12px;
+    color: var(--grey-accent);
+    vertical-align: top;
+}
+
+.redBorder {
+    background-color: var(--red);
+}
+
+.greenBorder {
+    background-color: var(--green);
+}
+
+.yellowBorder {
+    background-color: var(--yellow);
 }
