--- a/message-dashboard/main.css
+++ b/message-dashboard/main.css
@@ -471,6 +471,7 @@ a:hover {
     -ms-transition: all 0.1s ease-in;
     -o-transition: all 0.1s ease-in;
     transition: all 0.1s ease-in;
+    cursor: pointer;
 }
 
 .messageBar.active {
@@ -509,12 +510,16 @@ a:hover {
 
 .verticalMenu {
     margin: 5px 10px 0 0;
+    color: var(--grey-accent);
+}
+
+.verticalMenu:hover{
+    color: var(--dark-purple);
 }
 
 .messageBar .verticalMenu:after {
     content: '\2807';
     font-size: 23px;
-    color: var(--grey-accent);
 }
 
 .circleIndicator {
@@ -540,4 +545,17 @@ a:hover {
 
 .yellowBorder {
     background-color: var(--yellow);
+}
+
+.popupEdit{
+    position: absolute;
+    z-index: 1;
+    background: #FFF;
+    width: 150px;
+    height: 80px;
+    right: 0;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    box-shadow: 0px 0px 8px 0px rgba(148, 148, 148, 1);
+    margin: -30px -20px 0 0;
 }
