--- a/trips-dashboard/main.css
+++ b/trips-dashboard/main.css
@@ -1,17 +1,28 @@
+:root {
+    --light-white: #f4f6f5;
+    --white: #fff;
+    --dark-grey: #555;
+    --alt-grey: #888;
+    --grey: #ccc;
+    --light-grey: #ebeff0;
+    --orange: #ff5053;
+    --blue: #4dccc3;
+}
+
 html, body {
     padding: 0;
     margin: 0;
-    background: #f4f6f5;
-    color: #555;
+    background: var(--light-white);
+    color: var(--dark-grey);
     height: 100%;
     min-height: 100%;
 }
 
 .topMenu {
     height: 60px;
-    background: white;
+    background: var(--white);
     padding: 10px;
-    border-bottom: 2px solid #ebeff0;
+    border-bottom: 2px solid var(--light-grey);
 }
 
 .topMenu ul {
@@ -24,24 +35,24 @@ html, body {
     float: left;
     margin: 10px 15px;
     font-size: 12px;
-    color: #ccc;
+    color: var(--grey);
     cursor: pointer;
     height: 38px;
 }
 
 .topMenu ul li.active, .topMenu ul li:hover {
-    color: #555;
-    border-bottom: 2px solid #ff5053;
+    color: var(--dark-grey);
+    border-bottom: 2px solid var(--orange);
 }
 
 .topMenu ul li:first-child {
     font-size: 20px;
     margin: 3px 20px;
-    color: #555;
+    color: var(--dark-grey);
 }
 
 .topMenu ul li .fa {
-    color: #ff5053;
+    color: var(--orange);
     margin-right: 5px;
 }
 
@@ -49,45 +60,44 @@ html, body {
     display: inline-block;
 }
 
-
 .notifications {
     padding: 1px 2px 2px 2px;
     text-align: center;
     font-size: 12px;
     width: 22px;
     height: 22px;
-    color: white;
+    color: var(--white);
     border-radius: 50px;
-    background: #ff5053;
+    background: var(--orange);
     display: inline-block;
     cursor: pointer;
-    border: 1px solid #ff5053;
+    border: 1px solid var(--orange);
 }
 
 .notifications:hover {
     background: none;
-    color: #555;
+    color: var(--dark-grey);
 }
 
 .search {
-    border: 2px solid #ebeff0;
+    border: 2px solid var(--light-grey);
     padding: 5px 10px;
     border-radius: 20px;
     font-size: 14px;
 }
 
 .search .fa {
-    color: #ccc;
+    color: var(--grey);
 }
 
 .fa-bell-o {
-    color: #888;
+    color: var(--alt-grey);
     margin: 0 20px 0 6px;
     cursor: pointer;
 }
 
 .fa-bell-o:hover {
-    color: #ff5053;
+    color: var(--orange);
 }
 
 .search input {
@@ -108,11 +118,11 @@ html, body {
 }
 
 .leftBar {
-    background: white;
+    background: var(--white);
     padding: 10px 0px;
     margin: 0;
     font-size: 12px;
-    border-right: 2px solid #ebeff0;
+    border-right: 2px solid var(--light-grey);
 }
 
 .leftBar ul {
@@ -123,20 +133,20 @@ html, body {
 }
 
 .leftBar img {
-    border: 2px solid #ccc;
+    border: 2px solid var(--grey);
     height: 50px;
     width: 50px;
 }
 
 .leftBar img:hover {
-    border-color: #ff5053;
+    border-color: var(--orange);
 }
 
 .leftBar ul li {
     padding: 25px 0;
     font-weight: bold;
-    color: #888;
-    border-bottom: 2px solid #ebeff0;
+    color: var(--alt-grey);
+    border-bottom: 2px solid var(--light-grey);
     cursor: pointer;
 }
 
@@ -146,7 +156,7 @@ html, body {
 }
 
 .leftBar li:hover .fa {
-    color: #ff5053;
+    color: var(--orange);
 }
 
 .middleContent {
@@ -158,7 +168,7 @@ html, body {
 }
 
 .filter {
-    color: #ff5053;
+    color: var(--orange);
     font-size: 12px;
     margin-top: 40px;
     text-align: right;
@@ -194,10 +204,10 @@ html, body {
 }
 
 .cardLabel {
-    background: #ff5053;
+    background: var(--orange);
     -webkit-clip-path: polygon(0% 0%, 100% 1%, 86% 48%, 100% 100%, 0% 100%);
     clip-path: polygon(0% 0%, 100% 1%, 86% 48%, 100% 100%, 0% 100%);
-    color: white;
+    color: var(--white);
     padding: 3px 30px 3px 10px;
     position: absolute;
     z-index: 10;
@@ -208,7 +218,7 @@ html, body {
 }
 
 .cardMetadata {
-    color: #4dccc3;
+    color: var(--blue);
     font-size: 12px;
 }
 
@@ -219,15 +229,15 @@ html, body {
 }
 
 .cardMetadata .fa-share-alt, .cardMetadata .fa-heart-o {
-    color: #ccc;
+    color: var(--grey);
 }
 
 .cardMetadata .fa-share-alt:hover {
-    color: #4dccc3;
+    color: var(--blue);
 }
 
 .cardMetadata .fa-heart-o.active, .cardMetadata .fa-heart-o:hover, .cardMetadata .fa-heart {
-    color: #ff5352;
+    color: var(--orange);
 }
 
 .profileImg {
@@ -236,31 +246,31 @@ html, body {
     position: absolute;
     top: 140px;
     right: 30px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--grey);
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, .1);
     box-shadow: 0 0 15px rgba(0, 0, 0, .1);
 }
 
 .rightBar {
-    background: white;
-    border-left: 2px solid #ebeff0;
+    background: var(--white);
+    border-left: 2px solid var(--light-grey);
     padding: 30px 15px;
 }
 
 .profileShare {
     font-size: 12px;
-    color: #aaa;
+    color: var(--grey);
 }
 
 .profileShare img {
     height: 30px;
     width: 30px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--grey);
 }
 
 .profileShare span {
     font-weight: bold;
-    color: #888;
+    color: var(--alt-grey);
 }
 
 .smaller {
@@ -279,18 +289,18 @@ html, body {
 .titleBox {
     font-size: 12px;
     font-weight: bold;
-    color: #888;
+    color: var(--alt-grey);
     margin-bottom: 12px;
 }
 
 .titleBox .fa {
-    color: #ff5352;
+    color: var(--orange);
     font-size: 14px;
     margin: 10px 8px 0 0;
 }
 
 .number {
-    color: #555;
+    color: var(--dark-grey);
     font-weight: bold;
     margin: 10px 0;
 }
@@ -317,8 +327,8 @@ html, body {
 }
 
 .times {
-    border-top: 1px solid #ebeff0;
-    border-bottom: 1px solid #ebeff0;
+    border-top: 1px solid var(--light-grey);
+    border-bottom: 1px solid var(--light-grey);
     margin-top: 20px;
 }
 
@@ -327,13 +337,13 @@ html, body {
 }
 
 .times .col-6:first-child {
-    border-right: 1px solid #ebeff0;
+    border-right: 1px solid var(--light-grey);
 }
 
 .times span {
     font-size: 10px;
     font-weight: bold;
-    color: #888;
+    color: var(--alt-grey);
 }
 
 .times h5 {
@@ -358,13 +368,13 @@ html, body {
 }
 
 .btn-outline-success {
-    border-color: #4dccc3;
-    color: #4dccc3;
+    border-color: var(--blue);
+    color: var(--blue);
 }
 
 .btn-outline-success:hover {
-    border-color: #4dccc3;
-    background: #4dccc3;
+    border-color: var(--blue);
+    background: var(--blue);
 }
 
 @media only screen and (max-width: 1015px) {
