--- a/login/main.css
+++ b/login/main.css
@@ -7,8 +7,8 @@
     --white: #fff;
     --light-white: #92a3b6;
     --grey: #4c5c71;
-    --light-red: #cb677a;
-    --dark-red: #9d3c58;
+    --light-purple: #6a85b6;
+    --light-orange: #ebbba7;
     --green-white: #cdfff0;
 }
 
@@ -31,27 +31,27 @@ html, body {
 }
 
 .greenBackground {
-    background: #6cdfca; /* Old Browsers */
-    background: -webkit-linear-gradient(top, #6cdfca, #4dc0b5); /*Safari 5.1-6*/
-    background: -o-linear-gradient(top, #6cdfca, #4dc0b5); /*Opera 11.1-12*/
-    background: -moz-linear-gradient(top, #6cdfca, #4dc0b5); /*Fx 3.6-15*/
-    background: linear-gradient(to bottom, #6cdfca, #4dc0b5); /*Standard*/
+    background: var(--light-green); /* Old Browsers */
+    background: -webkit-linear-gradient(top, var(--light-green), var(--dark-green)); /*Safari 5.1-6*/
+    background: -o-linear-gradient(top, var(--light-green), var(--dark-green)); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(top, var(--light-green), var(--dark-green)); /*Fx 3.6-15*/
+    background: linear-gradient(to bottom, var(--light-green), var(--dark-green)); /*Standard*/
 }
 
 .redBackground {
-    background: #cb677a; /* Old Browsers */
-    background: -webkit-linear-gradient(top, #cb677a, #9d3c58); /*Safari 5.1-6*/
-    background: -o-linear-gradient(top, #cb677a, #9d3c58); /*Opera 11.1-12*/
-    background: -moz-linear-gradient(top, #cb677a, #9d3c58); /*Fx 3.6-15*/
-    background: linear-gradient(to bottom, #cb677a, #9d3c58); /*Standard*/
+    background: var(--light-purple); /* Old Browsers */
+    background: -webkit-linear-gradient(top, var(--light-purple), var(--light-orange)); /*Safari 5.1-6*/
+    background: -o-linear-gradient(top, var(--light-purple), var(--light-orange)); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(top, var(--light-purple), var(--light-orange)); /*Fx 3.6-15*/
+    background: linear-gradient(to bottom, var(--light-purple), var(--light-orange)); /*Standard*/
 }
 
 .blueBackground {
-    background: #394c64; /* Old Browsers */
-    background: -webkit-linear-gradient(top, #394c64, #212d3e); /*Safari 5.1-6*/
-    background: -o-linear-gradient(top, #394c64, #212d3e); /*Opera 11.1-12*/
-    background: -moz-linear-gradient(top, #394c64, #212d3e); /*Fx 3.6-15*/
-    background: linear-gradient(to bottom, #394c64, #212d3e); /*Standard*/
+    background: var(--dark-blue); /* Old Browsers */
+    background: -webkit-linear-gradient(top, var(--dark-blue), var(--darker-blue)); /*Safari 5.1-6*/
+    background: -o-linear-gradient(top, var(--dark-blue), var(--darker-blue)); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(top, var(--dark-blue), var(--darker-blue)); /*Fx 3.6-15*/
+    background: linear-gradient(to bottom, var(--dark-blue), var(--darker-blue)); /*Standard*/
 }
 
 .pill {
@@ -213,7 +213,7 @@ span.meta {
     background: transparent;
     top: 9px;
     left: 7px;
-    border: 3px solid #fff;
+    border: 3px solid var(--white);
     border-top: none;
     border-right: none;
     transform: rotate(-45deg);
