--- a/login/main.css
+++ b/login/main.css
@@ -16,12 +16,14 @@ html, body {
     width: 100%;
     height: 100%;
     color: var(--white);
+    overflow-x: hidden;
 }
 
 .login {
     height: 100vh;
-    min-height: 680px;
+    min-height: 640px;
     padding: 60px 40px;
+    box-sizing: border-box;
 }
 
 .shadow {
