--- a/login/main.css
+++ b/login/main.css
@@ -20,8 +20,7 @@ html, body {
 }
 
 .login {
-    height: 100vh;
-    min-height: 640px;
+    height: 680px;
     padding: 60px 40px;
     box-sizing: border-box;
 }
